--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ li.head_list label {
     font-size: 28px;
     line-height: 5em;
     font-weight: bold;
-   font-family: "Comic Sans MS", cursive, sans-serif;
+   font-family: "Arial Black", Gadget, sans-serif;
     margin-right: 12px;
 }
 .section2 ul li label {
