--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,9 @@ li.qrcode img {
     margin-left: -3px;
 }
 .workx_box2::before {
+    background-color: #d9edf7;
+}
+.workx_box5::before {
     background-color: transparent;
 }
 .work_boxx::after {
